--- a/SAM.WinUI/Views/SettingsPage.xaml
+++ b/SAM.WinUI/Views/SettingsPage.xaml
@@ -196,6 +196,26 @@
                                       Grid.Column="1"
                                       Toggled="AutoUpdateToggle_Toggled"/>
                     </Grid>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel>
+                            <TextBlock x:Name="OfflineModeTitleText" Text="Offline mode" 
+                                       Style="{StaticResource BodyTextBlockStyle}"/>
+                            <TextBlock x:Name="OfflineModeDescriptionText" Text="Use cached data when Steam has no internet"
+                                       Style="{StaticResource CaptionTextBlockStyle}"
+                                       Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                       TextWrapping="Wrap"/>
+                        </StackPanel>
+
+                        <ToggleSwitch x:Name="OfflineModeToggle"
+                                      Grid.Column="1"
+                                      Toggled="OfflineModeToggle_Toggled"/>
+                    </Grid>
                 </StackPanel>
             </Border>
 
@@ -254,6 +274,53 @@
                                    Style="{StaticResource CaptionTextBlockStyle}"
                                    Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
                     </StackPanel>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel>
+                            <TextBlock x:Name="CacheLimitTitleText" Text="Image cache size" 
+                                       Style="{StaticResource BodyTextBlockStyle}"/>
+                            <TextBlock x:Name="CacheLimitDescriptionText" Text="Limit for image cache storage"
+                                       Style="{StaticResource CaptionTextBlockStyle}"
+                                       Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                       TextWrapping="Wrap"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Column="1" Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                            <NumberBox x:Name="CacheLimitBox"
+                                       Width="90"
+                                       Minimum="50"
+                                       Maximum="1024"
+                                       SmallChange="10"
+                                       LargeChange="50"
+                                       ValueChanged="CacheLimitBox_ValueChanged"/>
+                            <TextBlock x:Name="CacheLimitUnitText" Text="MB" VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </Grid>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel>
+                            <TextBlock x:Name="CacheStatusTitleText" Text="Image cache" 
+                                       Style="{StaticResource BodyTextBlockStyle}"/>
+                            <TextBlock x:Name="CacheStatusText" Text="0 MB used"
+                                       Style="{StaticResource CaptionTextBlockStyle}"
+                                       Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
+                        </StackPanel>
+
+                        <Button x:Name="ClearCacheButton"
+                                Grid.Column="1"
+                                Content="Clear"
+                                Click="ClearCacheButton_Click"/>
+                    </Grid>
                 </StackPanel>
             </Border>
         </StackPanel>
