--- a/SAM.Manager/Controls/ConfettiControl.xaml
+++ b/SAM.Manager/Controls/ConfettiControl.xaml
@@ -3,10 +3,9 @@
     x:Class="SAM.Manager.Controls.ConfettiControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SAM.Manager.Controls"
     IsHitTestVisible="False">
 
-    <Canvas x:Name="ConfettiCanvas">
+    <Canvas Tag="ConfettiCanvas">
         <!-- Confetti particles are generated in code-behind -->
     </Canvas>
 </UserControl>
